<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/reAccount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/coloraccount">


            <com.facebook.login.widget.ProfilePictureView
                android:id="@+id/imageprofilepictureview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_30sdp"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
               android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textColor="#ffffff"
                android:layout_toRightOf="@+id/imageprofilepictureview"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_25sdp"/>

            <TextView
                android:id="@+id/tvDangXuat"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/dangxuat"
                android:textSize="@dimen/_10sdp"
                android:textColor="#ffffff"
                android:background="#424141"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/reAccount">

            <RelativeLayout
                android:id="@+id/rvHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp">
                <ImageView
                    android:id="@+id/imgHistory"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/iconhistory"/>
                <TextView
                    android:id="@+id/tvHistory"
                    android:layout_toRightOf="@+id/imgHistory"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/lichsuxem"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/colortext"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/xemtoanbo"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:layout_alignParentRight="true"
                    android:gravity="center"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rvDownload"
                android:layout_below="@+id/rvHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/imgDownload"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/download"/>
                <TextView
                    android:layout_toRightOf="@+id/imgDownload"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/taive"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/colortext"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rvScanQR"
                android:layout_below="@+id/rvDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/scanQR"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/scan"/>
                <TextView
                    android:layout_toRightOf="@+id/scanQR"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/scanqr"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/colortext"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rvLanguage"
                android:layout_below="@+id/rvScanQR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/language"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/language"/>
                <TextView
                    android:layout_toRightOf="@+id/language"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/language"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/colortext"/>
            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</layout>